[package]
name = "tree-sitter-kvlang"
description = "Basic Kivy Language Highlighting for Kivy: The Open Source Python App Development Framework."
version = "0.1.0"
authors = ["RY34"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kvlang"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ry34/tree-sitter-kvlang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
